# zoo-mcp

./: .gitignore  AGENTS.md  README.md  codex-zoo.sh  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: pytest.yml  release.yml  ruff.yml  ty.yml  win-ca-smoke.yml
src/zoo_mcp/: __init__.py  __main__.py  ai_tools.py  kcl_docs.py  kcl_samples.py  main.kcl  server.py  tmp_gear.kcl  tools.py  zoo_tools.py
src/zoo_mcp/utils/: data_retrieval_utils.py  image_utils.py
tests/: conftest.py  test_code_paths.py  test_data_retrieval_utils.py  test_docs.py  test_samples.py  test_server.py  test_tools.py  test_win_ca_smoke.py
tests/data/: box_with_linter_errors.kcl  cube.kcl  cube.step  cube.stl  fully_constrained_sketch.kcl  under_constrained_sketch.kcl
