[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "zoo_mcp"
version = "0.9.1"
requires-python = ">=3.11, <3.14"
dependencies = [
    "aiofiles~=25.1",
    "kittycad<=2.0",
    "mcp[cli]>1.23.0,<2.0",
    "pillow>=11.3,<13.0",
    "truststore~=0.10",
    "zoo-kcl>=0.3.117",
]
authors = [
    { name = "Ryan Barton", email = "ryan@zoo.dev" },
]
maintainers = [
    { name = "Ryan Barton", email = "ryan@zoo.dev" }
]
description = "An MCP server utilizing Zoo's various tools"
readme = "README.md"
license-files = ["LICENSE"]
license = "MIT"
keywords = ["zoo", "mcp", "kittycad", "3d", "modeling", "server"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/KittyCAD/zoo-mcp"

[project.scripts]
zoo-mcp = "zoo_mcp.server:main"

[tool.ruff.lint]
extend-select = ["F", "I"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[dependency-groups]
dev = [
    "pytest-asyncio==1.3.0",
    "pytest-rerunfailures==16.1",
    "pytest-xdist==3.8.0",
    "ruff==0.14.10",
    "ty==0.0.4",
    "uv-build==0.9.18",
]
